fix some entities ect..

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -12,7 +12,7 @@
 # ---------------
 
 # Server port (only port range 8303-8310 show up in LAN tab)
-sv_port 8303
+sv_port 8305
 
 # Server name
 sv_name "My DDNet server"
@@ -42,7 +42,7 @@ sv_rcon_mod_password ""
 sv_rcon_helper_password ""
 
 # Map to start server with
-sv_map "blblack"
+sv_map "blmapV3ROYAL"
 
 # Whether this is a test server and rcon cheats are allowed. Also indicated in
 # the server type, which is:
