--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -15,7 +15,7 @@
 sv_port 8305
 
 # Server name
-sv_name "My DDNet server"
+sv_name "[FRA] ! [Blocker Server] BabyV3Royal by Nouaa"
 
 # Password for joining the server, empty for no password
 password ""
