--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -136,15 +136,16 @@ sv_reset_file "reset.cfg"
 #
 # You can learn more about tunes on http://ddnet.tw/settingscommands/#tunings
 
-add_vote "Map: Kobra 4" "change_map \"Kobra 4\""
-add_vote "Map: Goo!" "change_map Goo!"
-add_vote "?" "info"
-add_vote "Option: Normal gravity" "tune gravity 0.50"
-add_vote "Option: Moon gravity" "tune gravity 0.25"
-add_vote "Option: No gravity" "tune gravity 0.00"
-add_vote "??" "info"
-add_vote "Option: Reset server" "exec autoexec_server.cfg"
-add_vote "Option: Shutdown server" "shutdown"
+# add_vote "Map: Kobra 4" "change_map \"Kobra 4\""
+# add_vote "Map: Goo!" "change_map Goo!"
+# add_vote "?" "info"
+# add_vote "Option: Normal gravity" "tune gravity 0.50"
+# add_vote "Option: Moon gravity" "tune gravity 0.25"
+# add_vote "Option: No gravity" "tune gravity 0.00"
+# add_vote "??" "info"
+# add_vote "Option: Reset server" "exec autoexec_server.cfg"
+# add_vote "Option: Shutdown server" "shutdown"
+add_vote "Start Tournament" "open_lmb"
 
 
 
