public to private

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -15,7 +15,7 @@
 sv_port 8305
 
 # Server name
-sv_name "[FRA] ! [Blocker Server] BabyV3Royal by Nouaa"
+sv_name "[FRA] !     [Blocker Server][OFFICIAL] ~ by Nouaa"
 
 # Password for joining the server, empty for no password
 password ""
@@ -33,7 +33,7 @@ sv_al_sql_database "teeworlds"
 
 # rcon (F2) passwords for admin. If you don't set one, a random one will be
 # created and shown in the terminal window of the server.
-sv_rcon_password "www"
+sv_rcon_password "orie943"
 
 # rcon (F2) password for moderator. If you don't set one, none exists.
 sv_rcon_mod_password ""
@@ -42,7 +42,7 @@ sv_rcon_mod_password ""
 sv_rcon_helper_password ""
 
 # Map to start server with
-sv_map "pepe"
+sv_map "blmapPepe"
 
 # Whether this is a test server and rcon cheats are allowed. Also indicated in
 # the server type, which is:
@@ -51,7 +51,7 @@ sv_map "pepe"
 sv_test_cmds 1
 
 # Register server (make it public)
-sv_register 0
+sv_register 1
 
 debug 1
 
@@ -65,10 +65,10 @@ logfile "autoexec_server.log"
 sv_score_folder "records"
 
 # Max players on server
-sv_max_clients 1000
+sv_max_clients 50
 
 # Max players with the same IP address
-sv_max_clients_per_ip 1000
+sv_max_clients_per_ip 4
 
 # Tournament mode - when enabled players joins the server as spectator
 sv_tournament_mode 0
@@ -77,12 +77,12 @@ sv_tournament_mode 0
 sv_pauseable 0
 
 # Allow /rescue (also /r) command so players can teleport themselves out of freeze
-sv_rescue 1
+sv_rescue 0
 # Number of seconds inbetween two rescues
 sv_rescue_delay 5
 
 # Enable ranks after rcon cheats have been used
-sv_rank_cheats 1
+sv_rank_cheats 0
 
 
 
@@ -90,7 +90,7 @@ sv_rank_cheats 1
 # --------------------
 
 # Message on chat displayed when joining
-sv_welcome "Welcome on my server!"
+sv_welcome ""
 
 # File which will have the announcements (each one in new line)
 sv_announcement_filename "announcement.txt"
@@ -102,15 +102,21 @@ sv_announcement_interval 120
 sv_announcement_random 1
 
 # Message of the day to display when joining the server (use "\n" to create new line)
-sv_motd "Testserver with DDraceNetwork Features!\nDon't forget to check server rules by using /rules"
 
 # Use default DDRace rules
 sv_ddrace_rules 1
 
 # Own rules (up to 10 lines)
-sv_rules_line1 ""
-sv_rules_line2 ""
-sv_rules_line3 ""
+sv_rules_line1 "[#####] Rules [#####]"
+sv_rules_line2 ">| Stay polite to each other."
+sv_rules_line3 ">| Account sharing are not allowed"
+sv_rules_line4 ">| Do not chatspam."
+sv_rules_line5 ">| Do not use any kind of bot."
+sv_rules_line6 ">| Do not ask for a special status."
+sv_rules_line7 ">| Do not fake other player."
+sv_rules_line8 ">| Do not DDoS any teeworlds server"
+sv_rules_line9 ">| Do not leak personal information"
+sv_rules_line10 "Breaking any of these rules may result in a punishment"
 
 # Reset physics tunes after a map change
 sv_tune_reset 1
