--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -42,7 +42,7 @@ sv_rcon_mod_password ""
 sv_rcon_helper_password ""
 
 # Map to start server with
-sv_map "blmapPepe"
+sv_map "BabigV3Royal"
 
 # Whether this is a test server and rcon cheats are allowed. Also indicated in
 # the server type, which is:
