--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -15,14 +15,14 @@
 sv_port 8305
 
 # Server name
-sv_name "[FRA] !     [Blocker Server][OFFICIAL] ~ by Nouaa"
+sv_name ""
 
 # Password for joining the server, empty for no password
 password ""
 
 # rcon (F2) passwords for admin. If you don't set one, a random one will be
 # created and shown in the terminal window of the server.
-sv_rcon_password "orie943"
+sv_rcon_password ""
 
 # rcon (F2) password for moderator. If you don't set one, none exists.
 sv_rcon_mod_password ""
@@ -31,7 +31,7 @@ sv_rcon_mod_password ""
 sv_rcon_helper_password ""
 
 # Map to start server with
-sv_map "blmapPepe"
+sv_map ""
 
 # Whether this is a test server and rcon cheats are allowed. Also indicated in
 # the server type, which is:
@@ -131,15 +131,6 @@ sv_reset_file "reset.cfg"
 #
 # You can learn more about tunes on http://ddnet.tw/settingscommands/#tunings
 
-# add_vote "Map: Kobra 4" "change_map \"Kobra 4\""
-# add_vote "Map: Goo!" "change_map Goo!"
-# add_vote "?" "info"
-# add_vote "Option: Normal gravity" "tune gravity 0.50"
-# add_vote "Option: Moon gravity" "tune gravity 0.25"
-# add_vote "Option: No gravity" "tune gravity 0.00"
-# add_vote "??" "info"
-# add_vote "Option: Reset server" "exec autoexec_server.cfg"
-# add_vote "Option: Shutdown server" "shutdown"
 add_vote "Start Tournament" "open_lmb"
 
 
