--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -15,14 +15,14 @@
 sv_port 8303
 
 # Server name
-sv_name ""
+sv_name "111"
 
 # Password for joining the server, empty for no password
 password ""
 
 # rcon (F2) passwords for admin. If you don't set one, a random one will be
 # created and shown in the terminal window of the server.
-sv_rcon_password ""
+sv_rcon_password "rcon"
 
 # rcon (F2) password for moderator. If you don't set one, none exists.
 sv_rcon_mod_password ""
@@ -31,7 +31,7 @@ sv_rcon_mod_password ""
 sv_rcon_helper_password ""
 
 # Map to start server with
-sv_map ""
+sv_map "blmapPepe"
 
 # Whether this is a test server and rcon cheats are allowed. Also indicated in
 # the server type, which is:
