--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ SlishteeBotMitigationLogs.logs
 Kicklist.txt
 Banlist.txt
 autoexec.cfg
+other/icons/teeworlds_gcc.coff
+data/maps/blmapPepe.map
+data/maps/blmapPepe.map
