--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -15,7 +15,7 @@
 sv_port 8303
 
 # Server name
-sv_name "111"
+sv_name "Nouaa's test server"
 
 # Password for joining the server, empty for no password
 password ""
@@ -31,7 +31,7 @@ sv_rcon_mod_password ""
 sv_rcon_helper_password ""
 
 # Map to start server with
-sv_map "blmapPepe"
+sv_map "blmapV3Royal"
 
 # Whether this is a test server and rcon cheats are allowed. Also indicated in
 # the server type, which is:
