remove deathnote (not perma) + remove armor effect

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -17,6 +17,17 @@ sv_port 8303
 # Server name
 sv_name "Nouaa's test server"
 
+sv_announcement_interval 10
+
+#security
+sv_account_slots 1
+sv_info_change_delay 15
+sv_kill_protection 0
+sv_max_clients_per_ip 2
+sv_rejoin_team_0 0
+sv_endless_drag 0
+sv_emoticon_delay 0
+
 # Password for joining the server, empty for no password
 password ""
 
